--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -11,6 +11,14 @@
 // MEDIA QUERRIES
 //
 
+@mixin medium {
+  @media screen and (min-width: $medium-breakpoint) {
+    @content;
+  }
+};
+
+$medium-breakpoint: 499px;
+
 @mixin tablet {
     @media screen and (min-width: $tablet-breakpoint) {
       @content;
