--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -10,9 +10,10 @@ $bg-secondary: #232940; // header, cta button hover
 // COLORS
 //
 
-//primary
-$global-text: #13182C; 
-$interactive: #2E66E5;
+//primary 
+// $global-text: #393d4b; 
+$global-text: rgb(66, 66, 66); 
+$interactive: rgb(255, 247, 255);
 $white: #FFFFFF;
 
 //secondary
