--- a/client/src/components/NameModal/NameModal.scss
+++ b/client/src/components/NameModal/NameModal.scss
@@ -1,15 +1,16 @@
 
 .modal {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     background-color: rgba(5, 5, 5, 0.2);
 
     &__container {
-        width: 80vw;
-        height: 40vw;
+        width: 90%;
+        height: 60vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -20,13 +21,37 @@
     }
 
     &__input {
-        margin-bottom: 1em;
-        width: 66%;
-        color: black;
+        // margin-bottom: 1em;
+        width: 76%;
+        // color: black;
+
+        margin: .5em;
+        padding: 1em;
+        // width: 60%;
+        height: 3em;
+        font-size: 1rem;
+        border: 2px solid rgb(66, 66, 66); ; 
+        border-radius: .25em;
     }
 
     &__button {
-        width: 70%;
-        color: black;
+        // width: 70%;
+        // color: black;
+
+        padding: 1em;
+        margin: .5em;
+        width: 76%;
+        font-size: 1rem;
+        font-weight: 600;
+        color: white;
+        background-color: rgb(66, 66, 66); 
+      
+        border-radius: .25em;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(66, 66, 66, 0.666); 
+
+        }
     }
 }
