--- a/client/src/components/TestDraft.scss
+++ b/client/src/components/TestDraft.scss
@@ -1,42 +1,225 @@
-.tab {
-    display: none;
+@import "../styles/global.scss";
 
-    &--pitchers {
+.heading {
+    margin-bottom: 1.5em;
+}
+
+.draft {
+    width: 100%;
+
+    // @include flex-container();
+
+
+    &__container {
+        padding: 0 .5em;
+        width: 100%;
+    }
+
+    &__team-name {
+        margin: 0 0 1em .66em;
+        // width: 100%;
+    }
+
+    &__selected {
+        width: 100%;
+        
+        // @include flex-container();
+
+        &-table {
+        margin:0 auto;
+            width: 75%;
+            // height: 5em;
+        }
+    }
+
+    &__tab {
+        display: none;
+    
+        &--pitcher {
+            display: block;
+            // margin: 0 auto;
+            width: 100%;
+
+        }
+        &--batter {
+            display: block;
+            width: 100%;
+        }
+
+        &-container {
+            margin: 1em 0;
+            @include flex-container(space-around, center, nowrap, row);
+        }
+
+        &-buttons {
+            width: 100%;
+            padding: .25em;
+            font-size: .9rem;
+            background-color: white;
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            &--pitcher {
+                @extend .draft__tab-buttons;
+                width: 100%;
+                border-bottom: 2px solid rgb(248, 213, 248);
+                border-right: 2px solid rgb(253, 205, 253);
+                border-bottom-right-radius: 2.5px;
+            }
+            &--batter {
+                @extend .draft__tab-buttons;
+                width: 100%;
+                border-bottom: 2px solid rgb(248, 213, 248);
+                border-left: 2px solid rgb(253, 205, 253);
+                border-bottom-left-radius: 2.5px;
+
+            }
+        }
+    }
+    
+    &__table-container {
+        overflow-x: auto;
+    }
+
+    &__table-heading {
+        margin: 1em 0;
+
+    }
+
+    &__head {
+
+    }
+
+    &__body {
+        // width: 100%;
+
+    }
+
+    &__row {
+        width: 100%;
+        border-bottom: 1px solid gainsboro;
+
+        &:hover {
+            background-color: rgb(255, 247, 255);
+        }
+
+        &--head {
+
+        }
+
+        &-items {
+            padding: .75em .15em;
+            max-width: 3em;
+            min-height: 1em;
+            font-size: .7rem;
+            text-align: center;
+            overflow: hidden;
+    
+            @include medium {
+                padding: .5em .15em;
+                width: 5em;
+                font-size: .75rem;
+            }
+    
+            &:hover {
+                cursor: default;
+            }
+    
+            &--name {
+                @extend .draft__row-items;
+                max-width: 5.5em;
+                font-weight: 600;
+                text-align: left;
+            }
+
+            &--selected {
+                @extend .draft__row-items;
+            }
+        }
+    }
+
+    &__head-items {
+        padding: .15em;
+        position: relative;
+        font-size: .7rem;
+        z-index: 2;
+
+        &--name {
+            @extend .draft__head-items;
+            text-align: left;
+        }
+
+        
+        @include medium {
+            padding: .5em .25em;
+            font-size: .75rem;
+        }
+
+        &--tooltip {
+            @extend .draft__head-items;
+            &:hover {
+                cursor: default;
+            }
+    
+            &:hover:before {
+                content: attr(data-tooltip);
+                padding: .5em;
+                width: 12em;
+                position:absolute;
+                top: -100%;
+                transform: translateY(-10%);
+                transform: translateX(-50%);
+                text-align:center;
+                color:white;
+                background: $global-text;
+                border-radius: 5px;
+            }
+    
+        }
+    }
+
+    &__buttons {
+        margin-left: .5em;
         display: block;
+        color: black;
+
+        &--finish {
+            @extend .draft__buttons;
+            margin: 2.5em auto;
+            padding: .5em;
+            width: 50%;
+            font-size: .9em;
+            font-weight: 600;
+            color: white;
+            background-color: $global-text;
+            border-radius: 5px;
+        }
+
+        &--player {
+            @extend .draft__buttons;
+            margin: .15em 0 .05em .5em;
+            padding: .5em;
+            font-size: .7em;
+            font-weight: 600;
+            color: white;
+            background-color: $global-text;
+            border-radius: 5px;
+
+            @include medium {
+                margin: .25em 0 .25em .5em;
+                padding: .5em;
+                font-size: .75em;
+                font-weight: 600;
+            }
+        }
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(66, 66, 66, .66);
+        }
     }
-    &--batters {
-        display: block;
-    }
-}
-
-table {
-    // width: 100%;
-    border-collapse: collapse;
 
 }
 
-th {
-    padding: .15em;
-
-}
-
-td {
-    // max-width: 5em;
-    padding: .15em;
-    // overflow-x: hidden;
-    // text-align: center;
-    border-spacing: 0px;
-    // background-color: gainsboro;
-    // border-bottom: 1px solid gainsboro;
-
-}
-
-tr {
-    // margin-bottom: .25em;
-    border-bottom: 1px solid gainsboro;
-    // background-color: rgb(255, 247, 255);
-
-    &:hover {
-        background-color: rgb(255, 247, 255);
-    }
-}
