--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -1,14 +1,22 @@
 @import "../../styles/global.scss";
 
 .user {
-    padding: 1em;
+    padding: 1em ;
+    width: 100%;
 
-    &__username {
-        margin-bottom: 1em;
+    &__container {
+        padding: 0 .5em;
+        width: 100%;
     }
 
-    &__teams-header {
-        margin-bottom: 1em;
+    &__sub-container {
+        margin-bottom: 2.66em;
+        @include flex-container(space-between);
+    }
+
+    &__heading {
+        margin: 1em 0 1.5em 0;
+        text-align: center;
     }
 
     &__no-team {
@@ -20,4 +28,182 @@
             @include flex-container(space-between, flex-start, wrap, column);
         }
     }
+    &__username {
+        // margin-bottom: .66em;
+        display: inline-block;
+        font-size: 1.66em;
+
+        @include medium {
+            font-size: 2.06em;
+        }
+    }
+
+
+    &__logout {
+        display: block;
+
+        padding: .36em .66em;
+        width: 6em;
+        font-size: .8em;
+        font-weight: 600;
+        color: white;
+        background-color: $global-text;
+        border-radius: 5px;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &__my-teams {
+        margin: 2em 0 1em 0;
+    }
+
+    &__team-name {
+        font-size: 1rem;
+        font-weight: normal;
+
+        @include medium {
+            font-size: 1.25rem;
+        }
+    }
+
+    &__table-container {
+        margin: 0 auto;
+    }
+
+    &__tab {
+        display: none;
+    
+        &--pitcher {
+            margin: 0 auto;
+            display: block;
+            max-width: 80%;
+        }
+
+        &--batter {
+            margin: 0 auto;
+            display: block;
+            width: 90%;
+        }
+
+        &-container {
+            margin: 1em 0 1em 0;
+            @include flex-container(space-around, center, nowrap, row);
+        }
+
+        &-buttons {
+            width: 100%;
+            padding: .25em;
+            font-size: .9rem;
+            background-color: white;
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            &--pitcher {
+                @extend .user__tab-buttons;
+                width: 100%;
+                border-bottom: 2px solid rgb(248, 213, 248);
+                border-right: 2px solid rgb(253, 205, 253);
+                border-bottom-right-radius: 2.5px;
+            }
+            &--batter {
+                @extend .user__tab-buttons;
+                width: 100%;
+                border-bottom: 2px solid rgb(248, 213, 248);
+                border-left: 2px solid rgb(253, 205, 253);
+                border-bottom-left-radius: 2.5px;
+
+            }
+        }
+    }
+    
+    &__table-container {
+        overflow-x: auto;
+    }
+
+    &__table-heading {
+        margin: 1em 0;
+    }
+
+    &__row {
+        width: 100%;
+        border-bottom: 1px solid gainsboro;
+
+        &:hover {
+            background-color: rgb(255, 247, 255);
+        }
+
+
+        &-items {
+            padding: .75em .15em;
+            font-size: .8rem;
+            text-align: center;
+            overflow: hidden;
+    
+            @include medium {
+                padding: .5em .15em;
+                // width: 5em;
+                font-size: 1rem;
+            }
+    
+            &:hover {
+                cursor: default;
+            }
+    
+            &--name {
+                @extend .user__row-items;
+                // max-width: 5.5em;
+                font-weight: 600;
+                text-align: left;
+            }
+
+            &--selected {
+                @extend .user__row-items;
+            }
+        }
+    }
+
+    &__head-items {
+        padding: .15em;
+        position: relative;
+        font-size: .7rem;
+        z-index: 2;
+
+        &--name {
+            @extend .user__head-items;
+            text-align: left;
+        }
+
+        
+        @include medium {
+            padding: .5em .25em;
+            font-size: 1rem;
+        }
+
+        &--tooltip {
+            @extend .user__head-items;
+            &:hover {
+                cursor: default;
+            }
+    
+            &:hover:before {
+                content: attr(data-tooltip);
+                padding: .5em;
+                width: 12em;
+                position:absolute;
+                top: -100%;
+                transform: translateY(-10%);
+                transform: translateX(-50%);
+                text-align:center;
+                color:white;
+                background: $global-text;
+                border-radius: 5px;
+            }
+    
+        }
+    }
 }
+
