--- a/client/src/components/TestDraft.scss
+++ b/client/src/components/TestDraft.scss
@@ -1,34 +1,40 @@
 @import "../styles/global.scss";
 
-.heading {
-    margin-bottom: 1.5em;
-}
-
 .draft {
     width: 100%;
-
-    // @include flex-container();
-
 
     &__container {
         padding: 0 .5em;
         width: 100%;
     }
 
+    &__heading {
+        margin: 1em 0 1.5em 0;
+        text-align: center;
+    }
+
     &__team-name {
-        margin: 0 0 1em .66em;
-        // width: 100%;
+        margin: 0 1em 0 .66em;
+        display: inline-block;
+        font-size: 1.25em;
+
+        @include medium {
+            font-size: 1.6em;
+        }
     }
 
     &__selected {
         width: 100%;
         
-        // @include flex-container();
+        &-sub-container {
+            margin-bottom: .5em;
+            width: 100%;
+            @include flex-container(center,center, nowrap, row)
+        }
 
         &-table {
         margin:0 auto;
             width: 75%;
-            // height: 5em;
         }
     }
 
@@ -47,7 +53,7 @@
         }
 
         &-container {
-            margin: 1em 0;
+            margin: 3.5em 0 1em 0;
             @include flex-container(space-around, center, nowrap, row);
         }
 
@@ -85,16 +91,6 @@
 
     &__table-heading {
         margin: 1em 0;
-
-    }
-
-    &__head {
-
-    }
-
-    &__body {
-        // width: 100%;
-
     }
 
     &__row {
@@ -141,7 +137,7 @@
     }
 
     &__head-items {
-        padding: .15em;
+        padding: .25em;
         position: relative;
         font-size: .7rem;
         z-index: 2;
@@ -159,15 +155,18 @@
 
         &--tooltip {
             @extend .draft__head-items;
+            position: relative;
+
             &:hover {
                 cursor: default;
+
             }
-    
+
             &:hover:before {
                 content: attr(data-tooltip);
                 padding: .5em;
                 width: 12em;
-                position:absolute;
+                position: absolute;
                 top: -100%;
                 transform: translateY(-10%);
                 transform: translateX(-50%);
@@ -175,6 +174,7 @@
                 color:white;
                 background: $global-text;
                 border-radius: 5px;
+                z-index: 2;
             }
     
         }
@@ -183,7 +183,6 @@
     &__buttons {
         margin-left: .5em;
         display: block;
-        color: black;
 
         &--finish {
             @extend .draft__buttons;
