--- a/client/src/components/Draft/Draft.scss
+++ b/client/src/components/Draft/Draft.scss
@@ -1,11 +1,47 @@
-@import "../styles/global.scss";
+@import "../../styles/global.scss";
 
 .draft {
     width: 100%;
 
+    
+
     &__container {
         padding: 0 .5em;
         width: 100%;
+    }
+
+    &__loading {
+        margin-right: .5em;
+    
+        &-container {
+            margin-top: 5em;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    &__logo {
+        padding-bottom: .5em;
+        display: block;
+        animation-name: spin;
+        animation-duration: 5000ms;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear; 
+
+        @include tablet {
+            width: 2.5rem;
+        }
+    }
+
+    @keyframes spin {
+        from {
+            transform:rotate(0deg);
+        }
+        to {
+            transform:rotate(360deg);
+        }
     }
 
     &__heading {
@@ -43,7 +79,6 @@
     
         &--pitcher {
             display: block;
-            // margin: 0 auto;
             width: 100%;
 
         }
@@ -152,7 +187,6 @@
             padding: .5em .25em;
             font-size: .75rem;
         }
-
         &--tooltip {
             @extend .draft__head-items;
             position: relative;
@@ -170,13 +204,12 @@
                 top: -100%;
                 transform: translateY(-10%);
                 transform: translateX(-50%);
-                text-align:center;
-                color:white;
+                text-align: center;
+                color :white;
                 background: $global-text;
                 border-radius: 5px;
                 z-index: 2;
             }
-    
         }
     }
 
@@ -221,4 +254,5 @@
     }
 
 }
+
 
