--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -13,7 +13,10 @@
     
     &__header {
         margin-left: .5em;
-        // font-size: 2.5rem;
+
+        @include medium {
+            font-size: 2.25rem;
+        }
 
         @include tablet {
             font-size: 2.5rem;
