--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -1,9 +1,9 @@
 @import "../../styles/global.scss";
 
 .login {
+    margin-top: 25%;
     @include flex-container(center, center, wrap, column);
-    height: 85vh;
-
+    width: 100%;
    
     &__header-container {
         margin-bottom: 5em;
@@ -45,35 +45,80 @@
         }
     }
 
-    &__input {
-        margin: .5em;
-        padding: 1em;
-        width: 60%;
-        height: 3em;
-        font-size: 1rem;
-        border: 2px solid rgb(66, 66, 66); ; 
-        border-radius: .25em;
-        // rgb(138, 65, 134)
-     
-        &--bottom {
-            @extend .login__input;
-            margin-bottom: 2em;
+    &__form-container {
+        width: 100%;
+    }
+
+    &-form {
+        @include flex-container(center, center, wrap, column);
+        // height: 35vh;
+
+        &__input {
+            margin: .5em;
+            padding: 1em;
+            width: 60%;
+            height: 3em;
+            font-size: 1rem;
+            border: 2px solid rgb(66, 66, 66); ; 
+            border-radius: .25em;
+            // rgb(138, 65, 134)
+         
+            &--bottom {
+                @extend .login-form__input;
+                margin-bottom: 2em;
+            }
+        }
+    
+        &__button {
+            padding: 1em;
+            margin: .5em;
+            width: 60%;
+            font-size: 1rem;
+            font-weight: 600;
+            color: white;
+            background-color: rgb(66, 66, 66); 
+          
+            border-radius: .25em;
+           
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
-    &__button {
-        padding: 1em;
-        margin: .5em;
-        width: 60%;
-        font-size: 1rem;
-        font-weight: 600;
-        color: white;
-        background-color: rgb(66, 66, 66); 
-      
-        border-radius: .25em;
-       
-        &:hover {
-            cursor: pointer;
+    &__tab {
+        display: none;
+
+
+        &-container {
+            margin-bottom: 2em;
+            width: 60%;
+            @include flex-container(space-between, center, nowrap, row);
+            border: 2px solid rgb(250, 215, 250);
+            border-radius: 2.5px;
+        }
+
+        &-buttons {
+            width: 60%;
+            padding: .5em;
+            font-size: .9rem;
+            background-color: white;
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            &--true {
+                @extend .login__tab-buttons;
+                width: 50%;
+                // font-weight: 600;
+                background-color: rgb(248, 213, 248);
+            }
+            
+            &--false {
+                @extend .login__tab-buttons;
+                width: 50%;
+            }
         }
     }
 
